# lean-ctx

./: AGENTS.md  CHANGELOG.md  CONTRACTS.md  LEAN-CTX.md  LEANCTX_FEATURE_CATALOG.md  README.md  SECURITY.md  install.sh  llms.txt
.github/: mcp.json
.github/workflows/: ci.yml  grammar-addons.yml  publish-vscode.yml  release.yml  security-check.yml
docs/: user-journeys.md
docs/contracts/: addon-manifest-v1.md  billing-plane-v1.md  billing-plane-v2.md  capabilities-contract-v1.md  email-digest-v1.md  hosted-personal-index-v1.md
docs/guides/: README.md  addons.md  cursor.md  hosted-index-slo.md  org-sso-setup.md  policy-packs.md
docs/integrations/: client-constraints-matrix-v1.md  installation-matrix.md
docs/reference/: 02-daily-use.md  05-advanced.md  14-performance-tuning.md  README.md  appendix-ide-quickstarts.md  appendix-paths-and-config.md
rust/: .gitignore  AGENTS.md  Cargo.toml  LOCK_ORDERING.md  README.md  dev-install.sh
rust/crates/grammar-addons/lua/: Cargo.toml
rust/crates/grammar-addons/lua/src/: lib.rs
rust/data/: addon_registry.json  grammar_registry.json
rust/scripts/: setup-fast-build.sh
rust/src/: daemon.rs  hook_handlers.rs  instructions.rs  proxy_setup.rs  terminal_ui.rs
rust/tests/: cloud_vault_roundtrip_e2e.rs  ctx_compose_scenarios.rs  gateway_e2e.rs  gateway_postprocess_e2e.rs  hn_hardening_scenarios.rs  intensive_benchmarks.rs  issue_1088_batch_replace_unique.rs  main.rs  (+10 more)
scripts/: cloud_vault_e2e.sh  history-policy-gate.py
security/: history-policy-v1.json
vscode-extension/: README.md  package-lock.json  package.json
(+380 files in other folders)
